rpi3: add jtag command to configure pinmux
Signed-off-by: John Clarke <johnc@cog.systems>

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -729,6 +729,11 @@ config CMD_GPIO
 	help
 	  GPIO support.
 
+config CMD_JTAG
+	bool "jtag"
+	help
+	  Raspberry Pi JTAG pinmux support.
+
 config CMD_FDC
 	bool "fdcboot - Boot from floppy device"
 	help
